--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@types/three": "^0.131.0"
+    "@types/three": "^0.131.0",
+    "prettier": "^2.3.2"
   }
 }
