--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "csv-parse": "^4.16.0",
+    "fetchline": "^1.0.1",
     "pullstate": "^1.22.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
