--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "meteor-globe",
   "version": "0.1.0",
+  "author": "Rob Agar",
+  "license": "GPL-3.0",
   "homepage": "/meteor-globe/",
   "private": true,
   "dependencies": {
