--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "homepage": "/meteor-globe/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.0",
+    "@mui/material": "^5.0.0-rc.1",
     "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
     "@types/node": "^12.20.19",
