--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fetchline": "^1.0.1",
     "pullstate": "^1.22.1",
     "react": "^17.0.2",
+    "react-div-100vh": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.131.3",
