--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.0",
-    "@mui/icons-material": "^5.0.0-rc.1",
+    "@mui/icons-material": "~5.0.0",
     "@mui/lab": "^5.0.0-alpha.46",
-    "@mui/material": "^5.0.0-rc.1",
+    "@mui/material": "~5.0.0",
     "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
     "@types/node": "^12.20.19",
